# nutshell

./: .copier-answers.yml  .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md  plan.md
.github/workflows/: cd.yml  ci.yml
data/: 104906_all_posts.json  all_posts.txt  post_277474.txt  post_277475.txt  post_277478.txt  post_277480.txt  post_277482.txt  post_277483.txt  post_277485.txt  post_277487.txt  post_277489.txt  post_277490.txt  post_277491.txt  post_277493.txt  post_277494.txt  post_277495.txt  post_277496.txt  post_277497.txt  post_277499.txt  post_277500.txt  post_277502.txt  post_277503.txt  post_277504.txt  post_277505.txt  post_277506.txt  post_277507.txt  post_277508.txt  post_277509.txt  post_277512.txt  post_277513.txt  post_277516.txt  post_277517.txt  post_277519.txt  post_277520.txt  post_277525.txt  post_277527.txt  post_277528.txt  post_277531.txt  post_277532.txt  post_277534.txt  (+156 more)
docs/: api.md  index.md
notebooks/: basic_query.ipynb  clean_data.ipynb
src/discuss_nutshell/: __init__.py  cli.py  data_loader.py  data_logger.py  launch_app.py  preprocessor.py
src/nutshell/: __init__.py  data_loader.py  preprocessor.py  utils.py
tests/: test_package.py
